--- a/Donut-on-Demand/src/main/webapp/css/style.css
+++ b/Donut-on-Demand/src/main/webapp/css/style.css
@@ -721,3 +721,19 @@ a:focus {
 
 /* end footer section*/
 /*# sourceMappingURL=style.css.map */
+
+
+.box-grey-bg {
+    padding: 20px;
+    background-color: #f2f2f2;
+}
+
+
+button, [type="submit"] {
+display: inline-block;
+padding: 8px 40px;
+margin: 4px;
+background-color: #313131;
+border: 1px solid #313131;
+color: #ffffff;
+}
